[tool.poetry]
name = "map-maker"
version = "0.1.0"
description = ""
authors = ["Francisco <vieirafrancisco.dev@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
